Fixed the css for label text alignment

--- a/src/components/renders/bootstrap/form-field/form-field-render.scss
+++ b/src/components/renders/bootstrap/form-field/form-field-render.scss
@@ -88,7 +88,12 @@ gx-form-field {
     width: 100%;
     flex: 0 0 25%;
     max-width: 25%;
-    text-align: -webkit-auto;
+  }
+
+  .label-left,
+  .label-top,
+  .label-bottom {
+    text-align: start;
   }
 
   .label-right {
@@ -107,7 +112,6 @@ gx-form-field {
   .label-top,
   .label-bottom {
     flex: 0;
-    text-align: -webkit-auto;
   }
 
   .field-label-top,
